# wizengamot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  FEATURES.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  start.sh
backend/: brainstorm_styles.py  config.py  content.py  council.py  diagram_styles.py  graph_rag.py  kg_chat_storage.py  knowledge_discovery.py  knowledge_graph.py  main.py  monitor_analysis.py  monitor_chat.py  monitor_crawler.py  monitor_digest.py  monitor_scheduler.py  monitor_updates.py  monitors.py  openrouter.py  prompts.py  question_sets.py  search.py  settings.py  sleep_compute.py  storage.py  summarizer.py  synthesizer.py  threads.py  tweet.py  visualiser.py
backend/crawler/: __init__.py  adapter.py  client.py  config.py  errors.py  fallback.py  site_mapper.py
backend/tests/: conftest.py  debug_firecrawl.py  test_crawler_adapter.py  test_monitor_e2e.py  test_youtube.py
backend/workers/: __init__.py  podcast.py  youtube.py
brainstorm_prompts/: big_mind_mapping.md  reverse_brainstorming.md  role_storming.md  scamper.md  six_thinking_hats.md  starbursting.md
docker/: nginx.conf  supervisord.conf
docs/: FEATURES.md
docs/showcase/: howto.md  manifest.json  render_showcase.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  (+1 more)
hooks/: post-commit
prompts/: diagrams.md
question_sets/: default-b2b-saas.md
scripts/: backup.sh  check-deps.sh  deploy.sh  migrate.sh  migrate_summaries.py  migrate_titles.py  regenerate_titles.py  setup-models.sh
(+172 files in other folders)
