[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "yt-dlp>=2024.0.0",
    "openai-whisper>=20231117",
    "feedparser>=6.0.0",
    "fastembed>=0.2.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "python-multipart>=0.0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
